2005-09-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/paper-system.hh (class Paper_system): remove
	number_ variable. Remove is_title_. Remove break_before_penalty_

	* lily/paper-book.cc (systems): use 'number property iso. number_
	member.

	* lily/paper-system-scheme.cc: remove ly:paper-system-break-before-penalty
	remove ly:paper-system-number.

	* scm/lily-library.scm (paper-system-title?): new function.

	* lily/book.cc (process): bugfix: flip ?: cases. 

	* Documentation/user/changing-defaults.itely (Difficult tweaks):
	add outputProperty.

	* ly/music-functions-init.ly: add outputProperty music function.

	* scm/paper.scm (set-paper-dimension-variables): add pagetopspace

	* scm/page-layout.scm (ly:optimal-page-breaks): read next-space
	and next-padding.
	(optimal-page-breaks): rename from ly:optimal-page-breaks.

	* lily/paper-system-scheme.cc (LY_DEFINE): new function.

	* lily/paper-system.cc (internal_get_property): new function.

	* Documentation/user/global.itely (Vertical spacing): refer to page-spacing.ly

	* scm/page-layout.scm (ly:optimal-page-breaks): add support for
	pagetopspace

	* input/regression/page-spacing.ly: new file.

	* input/regression/page-top-space.ly: new file.

	* lily/spacing-spanner.cc: cmath -> math.h

	* lily/paper-system.cc (read_left_bound): new function. Read
	line-break-system-details from left bound to determine extents.
 
	* Documentation/user/programming-interface.itely (Using LilyPond
	syntax inside Scheme): change applyxxx -> applyXxx.

	* ly/music-functions-init.ly: add outputProperty music function.

	* lily/parser.yy (Generic_prefix_music_scm): add scm-scm-scm signature.

	* lily/grob-scheme.cc (LY_DEFINE): add ! to ly:grob-suicide! name.

	* python/convertrules.py (conv): rule

	* ly/music-functions-init.ly: applyxxx -> applyXxx

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): alias
	TabVoice to Voice.

2005-09-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
